# ai-docs-tester

./: .env.example  .env.test.example  .gitignore  README.md  pyproject.toml  skills-lock.json
.github/workflows/: pre-merge-smoke.yml
analysis/: root-causes.md  team-summary.md
graders/privy-base/: typecheck.sh
graders/privy-zerodev-base/: setup.sh  typecheck.sh
graders/shared/: rainbowkit-base.sh
graders/zerodev-base/: e2e.sh  e2e.test.ts  playwright.config.ts  setup.sh  typecheck.sh
scaffolds/privy-base/: setup.sh
scaffolds/privy-zerodev-base/: setup.sh
scaffolds/shared/: rainbowkit-base.sh
scaffolds/zerodev-base/: setup.sh
scaffolds/zerodev-clean-base/: setup.sh
scripts/: get_privy_id.py  signup.py
src/docs_eval/: __init__.py  ai_judge.py  cli.py  config.py  discovery.py  llms_txt.py  mcp_server.py  reporter.py  runner.py  smoke.py  user_inputs.py
targets/: targets.yaml
use_cases/: SCHEMA.md
use_cases/privy/: 01-embedded-wallet-mint.yaml  02-sponsored-mint.yaml  03-batch-userop.yaml  04-passkey.yaml  06-session-key-mint.yaml  07-multi-owner.yaml  08-social-recovery.yaml  09-chain-abstraction.yaml  10-spending-limit.yaml  11-automated-executor.yaml  12-zerodev-kernel.yaml
use_cases/zerodev/: 01-kernel-account-ecdsa.yaml  02-gas-sponsorship.yaml  03-batch-userop.yaml  04-passkey.yaml  04-session-key-spend-limit.yaml  05-session-key-contract-allowlist.yaml  06-session-key-scoped.yaml  07-multi-owner.yaml  08-social-recovery.yaml  09-chain-abstraction.yaml  10-erc7579-plugin.yaml  11-automated-executor.yaml  12-privy-signer.yaml  (+2 more)
(+6 files in other folders)
