[project]
name = "docs-eval"
version = "0.1.0"
description = "Internal eval for AI-agent doc consumption"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0",              # OpenAI API (kept for legacy/GPT runs)
  "pyyaml>=6.0",
  "click>=8.1",
  "httpx>=0.27",
  "rich>=13.7",               # pretty CLI output
  "agentmail>=0.1.0",         # ephemeral email inboxes for agent login flows
  "python-dotenv>=1.0",       # load .env into os.environ
]

[project.scripts]
docs-eval = "docs_eval.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
